<resources>
    <string name="app_name">Watt</string>
    <string name="facebook_app_id">161969927533924</string>
    <string name="fb_login_protocol_scheme">fb161969927533924</string>
    <string name="title_activity_success">SuccessActivity</string>

    //[Start]
    //String Resource For Bottom_navigation_View
    <string name="dest_activity">Activity</string>
    <string name="dest_interests">Interests</string>
    <string name="dest_add">Add</string>
    <string name="dest_notifications">Notifications</string>
    <string name="dest_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //[End]
</resources>
